# prawator

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  bench.sh  config.h.in
app/: CMakeLists.txt  main.cpp  map_reader.cpp  parwator.cpp  parwatorCG.cpp
cmake/: Sanitizers.cmake  code-coverage.cmake
docs/: whitepaper.odt
include/: CMakeLists.txt  execution_planner.hpp  numa_allocator.hpp  pmr_deleter.hpp  posixFostream.hpp  utils.hpp  wator_gamecg.hpp  wator_map.hpp  wator_map.hpp.back  wator_rules.hpp  worker.hpp
include/wator/: entity.hpp  map.hpp  map_line.hpp  map_numa.hpp  rules.hpp  simulation.hpp  simulation_worker.hpp  tile.hpp  wator_gamecg.hpp
src/: CMakeLists.txt  execution_planner.cpp  lfsr_engine.hpp  test_LFSR.cpp  wator_gamecg.cpp  wator_map.cpp  wator_simulation.cpp  wator_simulation_worker.cpp
tests/: CMakeLists.txt  LZW_test.cpp  execution_planner.cpp  test_execution_planner.cpp  wator_line.cpp  wator_map.cpp  wator_map_numa.cpp  wator_tile.cpp
